# ambient-firmware-zephyr

./: LICENSE.txt  README.md  west.yml
app_all_task/: CMakeLists.txt  Kconfig  mcuboot_bird_ec256.conf  prj.conf
app_all_task/boards/: stm32l496g_bird.conf  stm32l496g_bird.overlay  stm32u5_bird.conf  stm32u5_bird.overlay
app_all_task/config/: inference_labels.txt
app_all_task/dts/bindings/: vendor-prefixes.txt
app_all_task/dts/bindings/misc/: bird,power-ctrl-pins.yaml
app_all_task/dts/bindings/retained_mem/: bird,retained-bbram.yaml
app_all_task/dts/bindings/sensor/: kionix,kxtj3-1057.yaml
app_all_task/src/: ADC3101.c  ADC3101.h  app_deep_sleep.c  app_feature_flags.h  app_state.c  bird_detect_mfcc_model_floating.h  bird_detect_model_wrapper.c  button_task.c  comm_task.c  dfu_task.c  ezbird_model_wrapper.c  ezbirdetect.h  ezbirdetect_bk.h  gps_task.c  i2c_task.c  imu_task.c  ina3221_task.c  inference_task.c  lorawan_task.c  main.c  microphone_task.c  power_ctrl.c  power_ctrl.h  power_fsm.c  power_fsm.h  qualia_model_wrappers.h  retained_state.c  retained_state.h  rtc_task.c  sensor_task.c  sound_wakeup_task.c  status_led_task.c  storage_task.c  system_task.c  tab_filt.h  tasks.h  watchdog_service.c
app_all_task/src/drivers/: retained_mem_bbram.c
boards/st/stm32l496g_bird/: Kconfig.stm32l496g_bird  stm32l496g_bird.dts  stm32l496g_bird.yaml  stm32l496g_bird_defconfig
boards/st/stm32u5_bird/: Kconfig.defconfig  stm32u5_bird.dts  stm32u5_bird_defconfig
stm32l496g_bird/: Kconfig.defconfig  board.cmake  board.yml  stm32l496g_bird.dts  stm32l496g_bird_defconfig
stm32l496g_bird/doc/: index.rst
stm32u5_bird/: Kconfig.stm32u5_bird  arduino_r3_connector.dtsi  board.yml  stm32u5_bird.dts  stm32u5_bird.yaml
